Updated NuGet packages

--- a/Gobman.CodeKatas.Mvc/Gobman.CodeKatas.Mvc/Views/Default/EditPerson.cshtml
+++ b/Gobman.CodeKatas.Mvc/Gobman.CodeKatas.Mvc/Views/Default/EditPerson.cshtml
@@ -26,5 +26,5 @@
         @Html.LabelFor(model => model.PhoneNumber)
         @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "form-control" })
     </div>
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Save" />
 }
