--- a/Gobman.CodeKatas.Mvc/Gobman.CodeKatas.Mvc/Views/Default/EditPerson.cshtml
+++ b/Gobman.CodeKatas.Mvc/Gobman.CodeKatas.Mvc/Views/Default/EditPerson.cshtml
@@ -11,7 +11,7 @@
 
 <h1>Edit @Model.FirstName @Model.LastName</h1>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(FormMethod.Post))
 {
     @Html.HiddenFor(model => model.PersonId)
     <div class="form-group">
@@ -23,8 +23,16 @@
         @Html.TextBoxFor(model => model.LastName, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.PhoneNumber)
-        @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "form-control" })
+
+        @Html.LabelFor(m => m.PhoneNumber)
+        @Html.TextBoxFor(m => m.PhoneNumber)
+        @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "error" })
+
     </div>
     <input type="submit" value="Save" />
+}
+
+@section Scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
