--- a/Gobman.CodeKatas.Mvc/Gobman.CodeKatas.Mvc/Views/Default/CreatePerson.cshtml
+++ b/Gobman.CodeKatas.Mvc/Gobman.CodeKatas.Mvc/Views/Default/CreatePerson.cshtml
@@ -40,10 +40,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(m => m.PhoneNumber)
+            <br />
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.PhoneNumber)
+                @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "error" })
             </div>
         </div>
 
